loader and fix text wrapping mobile

--- a/ParkStroiteleyMVC/wwwroot/assets/css/styles.css
+++ b/ParkStroiteleyMVC/wwwroot/assets/css/styles.css
@@ -136,6 +136,114 @@
     0% {opacity:0;}
     100% {opacity:1;}
   }
+
+.wrapper-slider {
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    z-index: 99999999;
+}
+
+.item-door {
+    width: 50%;
+    height: 100%;
+    background-color: white;
+    transition: 1s;
+    box-shadow: 0 0px 0px 0px rgba(0,0,0,0), 0 0px 0px 0px rgba(0,0,0,0), 0 0px 0px 0 rgba(0,0,0,0);
+    z-index: 99;
+}
+
+#right {
+    transform: translateX(0%);
+}
+
+#left {
+    transform: translateX(0%);
+}
+
+#preloader {
+    z-index: 99;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+#loader {
+    display: block;
+    position: relative;
+    left: 50%;
+    top: 50%;
+    width: 150px;
+    height: 150px;
+    margin: -75px 0 0 -75px;
+    border-radius: 50%;
+    border: 3px solid transparent;
+    border-top-color: rgb(0, 0, 0);
+    -webkit-animation: spin 2s linear infinite;
+    animation: spin 2s linear infinite;
+}
+
+    #loader:before {
+        content: "";
+        position: absolute;
+        top: 5px;
+        left: 5px;
+        right: 5px;
+        bottom: 5px;
+        border-radius: 50%;
+        border: 3px solid transparent;
+        border-top-color: rgb(0, 0, 255);
+        -webkit-animation: spin 3s linear infinite;
+        animation: spin 3s linear infinite;
+    }
+
+    #loader:after {
+        content: "";
+        position: absolute;
+        top: 15px;
+        left: 15px;
+        right: 15px;
+        bottom: 15px;
+        border-radius: 50%;
+        border: 3px solid transparent;
+        border-top-color: rgb(60, 10, 255);
+        -webkit-animation: spin 1.5s linear infinite;
+        animation: spin 1.5s linear infinite;
+    }
+
+@-webkit-keyframes spin {
+    0% {
+        -webkit-transform: rotate(0deg);
+        -ms-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+
+    100% {
+        -webkit-transform: rotate(360deg);
+        -ms-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes spin {
+    0% {
+        -webkit-transform: rotate(0deg);
+        -ms-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+
+    100% {
+        -webkit-transform: rotate(360deg);
+        -ms-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+
 .main-banner-text-icon
 {
     left: 40%;
@@ -148,7 +256,7 @@
 .main-banner-text-header
 {
     color: white;
-    font-size: 90px;
+    font-size: 7vw;
     font-family: 'Impact';
     letter-spacing: 3px;
 }
@@ -156,7 +264,7 @@
 {
     font-family: 'Arial Black';
     color: white;
-    font-size: 35px;
+    font-size: 3vw;
 }
 .myshadow
 {
